--- a/index.css
+++ b/index.css
@@ -1,8 +1,11 @@
 body {
     margin: 0;
     margin-left: 52px;
-    margin-top: 115px;
     background-color: #1F2937;
+}
+
+.title {
+  margin-top: 115px;
 }
 
 h1 {
@@ -17,6 +20,19 @@ p {
   color: #D5D4D8;
   font-size: 20px;
   margin-top: 10px;
+}
+
+.button{
+  margin-top: 52px;
+}
+
+button {
+  background-color: #10B981;
+  color: white;
+  border-radius: 6px;
+  width: 190px;
+  height: 40px;
+
 }
 
 .white {
