--- a/index.css
+++ b/index.css
@@ -27,12 +27,24 @@ p {
 }
 
 button {
+  font-family: "Inter", sans-serif;
+  font-style: Medium;
+  font-size: 16px;
   background-color: #10B981;
   color: white;
   border-radius: 6px;
   width: 190px;
   height: 40px;
 
+}
+
+hr {
+  width: 450px;
+  background-color: #2F3E53; 
+  margin-left: 0;
+  margin-top: 35;
+  height: 2px;
+  border: none;
 }
 
 .white {
